<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_nation_code"
            android:icon="@mipmap/icon_nation"
            android:title="@string/radio_nation" />
        <item
            android:id="@+id/nav_province_code"
            android:icon="@mipmap/icon_province"
            android:title="@string/radio_province" />
        <item
            android:id="@+id/nav_foreign_code"
            android:icon="@mipmap/icon_foreign"
            android:title="@string/radio_foreign" />
        <item
            android:id="@+id/nav_net_code"
            android:icon="@mipmap/icon_net"
            android:title="@string/radio_net" />
    </group>
    <item android:title="设置">
        <menu>
            <item
                android:id="@+id/nav_timingClose"
                android:icon="@mipmap/icon_timingclose"
                android:title="@string/timingClose" />
            <item
                android:id="@+id/nav_favorite"
                android:icon="@mipmap/icon_favorite"
                android:title="@string/radio_favorite" />
        </menu>
    </item>

    <item android:title="@string/contract_us">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@mipmap/icon_about_us"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_feed_back"
                android:icon="@mipmap/icon_feedback"
                android:title="@string/feed_back" />
        </menu>
    </item>

</menu>
