<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/ting_shape_rect"

    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/color_e5e5e5"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="40dip">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/batch_download"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:background="@color/color_e5e5e5"
        android:layout_width="match_parent"
        android:layout_height="0.5dip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="30dip">

        <TextView
            android:id="@+id/total_chapter_tv"
            android:text="共0章"
            android:textSize="11sp"
            android:textColor="@color/color_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_marginBottom="10dip"
        android:layout_marginLeft="10dip"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="30dip">

        <TextView
            android:textSize="11sp"
            android:textColor="@color/color_20"
            android:text="@string/start_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:padding="1dip"
            android:background="@drawable/ting_shape_chapter_select"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/start_reduce_tv"
                android:background="@drawable/ting_shape_rect_chapter_left"
                android:text="—"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="20dip"
                android:gravity="center"
                android:layout_height="match_parent" />

            <EditText
                android:id="@+id/start_et"
                android:layout_width="0dip"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
               android:text="1"
                android:inputType="number"
                android:background="@null"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/start_add_tv"
                android:text="+"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="20dip"
                android:gravity="center"
                android:background="@drawable/ting_shape_rect_chapter_right"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dip"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_height="30dip">

        <TextView
            android:textSize="11sp"
            android:textColor="@color/color_20"
            android:text="@string/end_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:padding="1dip"
            android:gravity="center_vertical"
            android:background="@drawable/ting_shape_chapter_select"
            android:layout_marginRight="10dip"
            android:layout_marginLeft="10dip"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/end_reduce_tv"
                android:background="@drawable/ting_shape_rect_chapter_left"
                android:text="—"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="20dip"
                android:gravity="center"
                android:layout_height="match_parent" />

            <EditText
                android:inputType="number"
                android:id="@+id/end_et"
                android:layout_width="0dip"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="1"
                android:background="@null"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/end_add_tv"
                android:text="+"
                android:background="@drawable/ting_shape_rect_chapter_right"
                android:textColor="@android:color/holo_blue_dark"
                android:layout_width="20dip"
                android:gravity="center"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:gravity="center"
        android:layout_marginTop="10dip"
        android:textSize="11sp"
        android:text="@string/download_tip"
        android:layout_width="match_parent"
        android:layout_height="20dip" />

    <View
        android:background="@color/color_e5e5e5"
        android:layout_width="match_parent"
        android:layout_height="0.5dip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="40dip">

        <TextView
            android:id="@+id/batch_download_cancle_tv"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_height="match_parent" />

        <View
            android:background="@color/color_e5e5e5"
            android:layout_width="0.5dip"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/batch_download_sure_tv"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/download"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>