<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="15dip"
    android:paddingRight="15dip"
    android:paddingTop="10dip"
    android:paddingBottom="5dip"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/picture_iv"
        android:id="@+id/history_text_rl"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="40dip">

        <TextView
            android:textColor="@android:color/white"
            android:text="@string/book_detail_last_page"
            android:gravity="center"
            android:background="@drawable/ting_shape_red"
            android:id="@+id/last_position_tv"
            android:layout_marginTop="3dip"
            android:layout_marginBottom="3dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_text_rl"
        app:layout_constraintRight_toLeftOf="@+id/detail_info_ll1"
        android:id="@+id/picture_iv"
        android:background="@android:color/white"
        android:scaleType="centerCrop"
        android:layout_width="80dip"
        android:layout_height="100dip" />

    <LinearLayout
        android:layout_marginLeft="10dip"
        app:layout_constraintBottom_toTopOf="@+id/detail_info_ll2"
        app:layout_constraintVertical_weight="1"
        android:id="@+id/detail_info_ll1"
        app:layout_constraintTop_toBottomOf="@+id/history_text_rl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/picture_iv"
        android:layout_width="0dip"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_weight="1"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginRight="10dip"
            android:text="@string/book_detail_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/type_tv"
            android:text="加载中..."
            android:layout_width="wrap_content"
            android:textColor="@color/color_20"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dip"
        app:layout_constraintTop_toBottomOf="@+id/detail_info_ll1"
        app:layout_constraintBottom_toTopOf="@+id/detail_info_ll3"
        app:layout_constraintVertical_weight="1"
        android:id="@+id/detail_info_ll2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/picture_iv"
        android:layout_width="0dip"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_weight="1"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginRight="10dip"
            android:text="@string/book_detail_zz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_zz_tv"
            android:text="加载中..."
            android:layout_width="wrap_content"
            android:textColor="@color/color_20"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dip"
        app:layout_constraintTop_toBottomOf="@+id/detail_info_ll2"
        app:layout_constraintBottom_toTopOf="@+id/detail_info_ll4"
        app:layout_constraintVertical_weight="1"
        android:id="@+id/detail_info_ll3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/picture_iv"
        android:layout_width="0dip"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_weight="1"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginRight="10dip"
            android:text="@string/book_detail_bf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_bf_tv"
            android:text="加载中..."
            android:layout_width="wrap_content"
            android:textColor="@color/color_20"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="10dip"
        app:layout_constraintTop_toBottomOf="@+id/detail_info_ll3"
        app:layout_constraintBottom_toBottomOf="@+id/picture_iv"
        app:layout_constraintVertical_weight="1"
        android:id="@+id/detail_info_ll4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/picture_iv"
        android:layout_width="0dip"
        android:gravity="center_vertical"
        app:layout_constraintHorizontal_weight="1"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginRight="10dip"
            android:text="@string/book_detail_bj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/detail_bj_tv"
            android:text="加载中..."
            android:layout_width="wrap_content"
            android:textColor="@color/color_20"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:maxLines="5"
        android:ellipsize="end"
        android:layout_marginTop="10dip"
        android:lineSpacingMultiplier="1.5"
        android:textSize="13sp"
        android:textColor="@color/color_20"
        app:layout_constraintTop_toBottomOf="@+id/picture_iv"
        android:layout_width="wrap_content"
        android:id="@+id/book_introduce_tv"
        android:layout_height="wrap_content" />


</android.support.constraint.ConstraintLayout>