<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@color/white"
    android:layout_height="match_parent">

    <include layout="@layout/ting_layout_common_title_icon"/>

    <LinearLayout
        android:background="#f4f4f4"
        android:paddingLeft="15dip"
        android:paddingRight="15dip"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_height="50dip">

        <LinearLayout
            android:layout_marginTop="7dip"
            android:layout_marginBottom="7dip"
            android:layout_marginRight="15dip"
            android:layout_marginLeft="15dip"
            android:layout_width="match_parent"
            android:background="@drawable/ting_shape_search_frame"
            android:orientation="horizontal"
            android:layout_height="35dip">

            <ImageView
                android:layout_marginLeft="5dip"
                android:layout_width="20dip"
                android:src="@mipmap/symbol23_2"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/search_et"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:textSize="13sp"
                android:background="@null"
                android:imeOptions="actionSearch"
                android:textColor="@color/text_76"
                android:gravity="center_vertical"
                android:hint="@string/string_search"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:background="@color/color_e5e5e5"
        android:layout_width="match_parent"
        android:layout_height="0.5dip"/>

    <LinearLayout
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:background="@android:color/white"
        android:id="@+id/history_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dip"
        android:orientation="vertical">

        <cn.yuntk.radio.ibook.widget.FlowTagLayout
            android:id="@+id/flow_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/local_history_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:background="@color/color_e5e5e5"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"/>

        <LinearLayout
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="35dip">

            <TextView
                android:layout_width="0dip"
                android:layout_weight="1"
                android:textColor="@color/color_theme_"
                android:textSize="15sp"
                android:text="@string/history_record"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:gravity="center_vertical"
                android:id="@+id/clear_record_ll"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:tint="@color/color_e5e5e5"
                    android:src="@drawable/ting_ic_del"
                    android:layout_width="14dip"
                    android:layout_height="30dip" />

                <TextView
                    android:text="@string/clear_history_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:background="@color/color_e5e5e5"
            android:layout_width="match_parent"
            android:layout_height="0.5dip"/>

        <android.support.v7.widget.RecyclerView
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:id="@+id/history_rv"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>